--- a/css/new-age.css
+++ b/css/new-age.css
@@ -304,7 +304,7 @@ section.cta {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/bg-cta.jpg');
+  background-image: url('../img/1.jpg');
   padding: 250px 0;
 }
 section.cta .cta-content {
@@ -314,6 +314,7 @@ section.cta .cta-content {
 section.cta .cta-content h2 {
   margin-top: 0;
   margin-bottom: 25px;
+  margin-left: 50%;
   color: white;
   max-width: 450px;
   font-size: 50px;
@@ -326,7 +327,7 @@ section.cta .cta-content h2 {
 section.cta .overlay {
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.3);
   position: absolute;
   top: 0;
   left: 0;
